--- a/index.html
+++ b/index.html
@@ -3,7 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta property="og:url" content="https://sunny-hummingbird-6e0585.netlify.app">
+    <meta property="og:title" content="UlsanTour">
+    <meta property="og:type" content="website">
+    <meta property="og:image" content="/img/main_img01.jpg">
+    <meta property="og:description" content="매력적인 도시 울산의 관광지를 소개합니다">
     <title>울산 관광</title>
+    <link rel="icon" href="favicon.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;500;700&display=swap" rel="stylesheet">
