opengragh url 수정

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta property="og:url" content="https://sunny-hummingbird-6e0585.netlify.app">
+    <meta property="og:url" content="https://deft-brioche-086738.netlify.app/">
     <meta property="og:title" content="UlsanTour">
     <meta property="og:type" content="website">
     <meta property="og:image" content="/img/main_img01.jpg">
