0306 웹표준검사 후 수정

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                     </ul>
                 </nav>
                 <div class="h1_serch">
-                    <form action="">
+                    <form action="/">
                         <input type="text" class="search" id="keyword" name="keyword" placeholder=""></form>
                         <button class="h1_btn"><span class="hide">검색하기</span></button>
                 </div>
@@ -46,11 +46,11 @@
                 <div class="headslide"><img src="img/main_img01.jpg" alt=""></div>
                 <div class="h2_in">
                     <div class="h2_text">
-                        <a href="">
+                        <a href="/">
                             <p class="h2_info">태화강 겨울철새, 떼까마귀<br>군무를 볼 수 있는 생태정원</p>
                             <h2>태화강 국가정원</h2>
-                        </div>
                         </a>
+                    </div>
                     <div class="h2_button">
                         <p class="prev"><span class="hide">이전으로</span></p>
                         <p class="stop"><span class="hide">멈춤</span></p>
@@ -206,10 +206,10 @@
                                 </a>
                                 <button type="button" class="m5_heart">좋아요</button>
                             </li>
-                            <div class="m5_button">
+                            <link class="m5_button">
                                 <p class="m5_prev"><span class="hide">이전으로</span></p>
                                 <p class="m5_next"><span class="hide">다음으로</span></p>
-                            </div>
+                            </link>
                         </ul>
                     </div>
                     <div class="m5_pager">
