0306 웹표준 수정2

--- a/index.html
+++ b/index.html
@@ -206,11 +206,11 @@
                                 </a>
                                 <button type="button" class="m5_heart">좋아요</button>
                             </li>
-                            <link class="m5_button">
-                                <p class="m5_prev"><span class="hide">이전으로</span></p>
-                                <p class="m5_next"><span class="hide">다음으로</span></p>
-                            </link>
                         </ul>
+                        <div class="m5_button">
+                            <p class="m5_prev"><span class="hide">이전으로</span></p>
+                            <p class="m5_next"><span class="hide">다음으로</span></p>
+                        </div>
                     </div>
                     <div class="m5_pager">
                         <p class="m5_1 active">1</p>
